# motion_energy_segmentation

./: .gitignore  README.md  pyproject.toml
configs/: flow_former_plus_plus.yaml  gmflow.yaml  mmflow.yaml  motion_energy.yaml
dataset/: io_utils.py  run.py  worker.py
human_subject_study/: __init__.py  config-dev.yaml  config.yaml  dataset.py  experiment.py  generate_experiment.py  random_utils.py  stream.py
human_subject_study/experiment/: app.py  install.sh  requirements.txt
human_subject_study/experiment/static/: index.html  plugin-random-dot-shape-identification-response.js
motion_energy_segmentation/: data_loader.py  evaluate_shape_identification.py  evaluators.py  io_utils.py  model.py  simoncelli_heeger.py  train.py  transforms.py
motion_energy_segmentation/flow_former_plus_plus/: __init__.py
motion_energy_segmentation/flow_former_plus_plus/_extern/: __init__.py
motion_energy_segmentation/unimatch/: __init__.py
motion_energy_segmentation/unimatch/_extern/: __init__.py  main_flow.py
